--- a/templates/project/accounts/dealer.html
+++ b/templates/project/accounts/dealer.html
@@ -29,7 +29,7 @@
                         <span class="fa fa-book" aria-hidden="true"></span>
                     </div>
                     <div class="text-center mt-3">
-                        <h4>Ödeme Yönetimi</h4>
+                        <h4><a href="{% url 'project:list-payment' %}">Ödeme Yönetimi</a></h4>
                     </div>
                 </div>
             </div>
