--- a/templates/project/accounts/distributor.html
+++ b/templates/project/accounts/distributor.html
@@ -61,7 +61,7 @@
                         <span class="fa fa-book" aria-hidden="true"></span>
                     </div>
                     <div class="text-center mt-3">
-                        <h4><a href="{% url 'project:list-product' %}">Ürün Yönetimi</a></h4>
+                        <h4><a href="{% url 'project:distributor-list-product' %}">Ürün Yönetimi</a></h4>
                     </div>
                 </div>
             </div>
