--- a/templates/project/distributor/product/create.html
+++ b/templates/project/distributor/product/create.html
@@ -2,7 +2,7 @@
 
 {% block top %}
         <h4>
-            <a href="{% url 'project:list-product' %}">Ürünler</a> -> Ürün Ekle : {{ request.session.role_name }}
+            <a href="{% url 'project:distributor-list-product' %}">Ürünler</a> -> Ürün Ekle : {{ request.session.role_name }}
         </h4>
 {% endblock %}
 
